# iota_common

./: CMakeLists.txt  README.md  library.json  src_gen_script.py
benchmarks/: CMakeLists.txt  bench_address.c
cmake/: base58.cmake  embear_logger.cmake  keccak.cmake  libsodium.cmake  rpi_toolchain.cmake  unity.cmake  uthash.cmake
common/: stdint.h
src/: CMakeLists.txt
src/crypto/: signing.c  signing.h
src/crypto/kerl/: bigint.c  bigint.h  converter.c  converter.h  kerl.c  kerl.h
src/model/: address.c  address.h  transaction.c  transaction.h
src/models/: address.c  address.h  balance.c  balance.h  message.h  transaction.c  transaction.h  types.h
src/models/inputs/: utxo_input.c  utxo_input.h
src/models/outputs/: sig_unlocked_single_deposit.c  sig_unlocked_single_deposit.h
src/models/payloads/: indexation.c  indexation.h  milestone.h  signed_data.h  signed_transaction.c  signed_transaction.h  unsigned_data.h
src/ternary/: ternary.c  ternary.h
src/utils/: memset_safe.c  memset_safe.h
tests/: CMakeLists.txt  test_address.c  test_balance.c  test_ed25519.c  test_inputs.c  test_kerl.c  test_outputs.c  test_signing.c  test_ternary.c  test_transaction.c
